# Labeling-pixels-in-a-2-dimensional-array

./: .gitignore  Approach1.py  Approach2.py  CMakeLists.txt  CMakeLists_old.txt  Parallel.out  README.md  Serial.out  main.cpp  parallel.cpp  serial.cpp
include/: image.h  includes.h  union_find.h  utils.h
src/: image.cpp  union_find.cpp  utils.cpp
